--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,8 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
-@import './styles/theme.css';
-@import './index.css';
+@import "./styles/theme.css";
+@import "./index.css";
 @import "tw-animate-css";
-/*
-  ---break---
-*/
-@custom-variant dark (&:is(.dark *));
 
 @config '../tailwind.config.js';
 
@@ -69,7 +65,7 @@
 /*
   ---break---
 */
-.dark {
+#spark-app[data-appearance="dark"] {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
