--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -192,7 +192,7 @@
     --font-family: var(--font-sans-serif);
   }
 
-  #spark-app.dark-theme {
+  #spark-app[data-appearance="dark"] {
     --color-bg: var(--color-neutral-1);
     --color-bg-inset: #000000;
     --color-bg-overlay: var(--color-neutral-3);
